added some changes

--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
 	</div>
 
 	<div class="button">
-		My Profile
+		<a href="#">My Profile</a>		
+		
 	</div>
 
 	<div class="button">
-		Friends
+		<a href="#">Friends</a>		
+		
 	</div>
 
 
